--- a/nord.css
+++ b/nord.css
@@ -22,7 +22,7 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 
-*/
+END Added MIT License */
 
 /*
 ++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -58,7 +58,7 @@ ambiance.
 Styleguide Nord
 */
 :root {
-  /*
+    /*
   Base component color of "Polar Night".
 
   Used for texts, backgrounds, carets and structuring characters like curly- and square brackets.
@@ -68,8 +68,8 @@ Styleguide Nord
 
   Styleguide Nord - Polar Night
   */
-  --nord0: #2E3440;
-  /*
+    --nord0: #2e3440;
+    /*
   Lighter shade color of the base component color.
 
   Used as a lighter background color for UI elements like status bars.
@@ -79,11 +79,11 @@ Styleguide Nord
 
   Styleguide Nord - Polar Night
   */
-  --nord1: #3B4252;
-  /*
+    --nord1: #3b4252;
+    /*
   Lighter shade color of the base component color.
 
-  Used as line highlighting in the editor.  
+  Used as line highlighting in the editor.
   In the UI scope it may be used as selection- and hightlight color.
 
   Markup:
@@ -91,11 +91,11 @@ Styleguide Nord
 
   Styleguide Nord - Polar Night
   */
-  --nord2: #434C5E;
-  /*
+    --nord2: #434c5e;
+    /*
   Lighter shade color of the base component color.
 
-  Used for comments, invisibles, indent- and wrap guide marker.  
+  Used for comments, invisibles, indent- and wrap guide marker.
   In the UI scope used as pseudoclass color for disabled elements.
 
   Markup:
@@ -103,8 +103,8 @@ Styleguide Nord
 
   Styleguide Nord - Polar Night
   */
-  --nord3: #4C566A;
-  /*
+    --nord3: #4c566a;
+    /*
   Base component color of "Snow Storm".
 
   Main color for text, variables, constants and attributes.
@@ -115,11 +115,11 @@ Styleguide Nord
 
   Styleguide Nord - Snow Storm
   */
-  --nord4: #D8DEE9;
-  /*
+    --nord4: #d8dee9;
+    /*
   Lighter shade color of the base component color.
 
-  Used as a lighter background color for UI elements like status bars.  
+  Used as a lighter background color for UI elements like status bars.
   Used as semi-light background depending on the theme shading design.
 
   Markup:
@@ -127,11 +127,11 @@ Styleguide Nord
 
   Styleguide Nord - Snow Storm
   */
-  --nord5: #E5E9F0;
-  /*
+    --nord5: #e5e9f0;
+    /*
   Lighter shade color of the base component color.
 
-  Used for punctuations, carets and structuring characters like curly- and square brackets.  
+  Used for punctuations, carets and structuring characters like curly- and square brackets.
   In the UI scope used as background, selection- and hightlight color depending on the theme shading design.
 
   Markup:
@@ -139,8 +139,8 @@ Styleguide Nord
 
   Styleguide Nord - Snow Storm
   */
-  --nord6: #ECEFF4;
-  /*
+    --nord6: #eceff4;
+    /*
   Bluish core color.
 
   Used for classes, types and documentation tags.
@@ -150,11 +150,11 @@ Styleguide Nord
 
   Styleguide Nord - Frost
   */
-  --nord7: #8FBCBB;
-  /*
+    --nord7: #8fbcbb;
+    /*
   Bluish core accent color.
 
-  Represents the accent color of the color palette.  
+  Represents the accent color of the color palette.
   Main color for primary UI elements and methods/functions.
 
   Can be used for
@@ -166,8 +166,8 @@ Styleguide Nord
 
   Styleguide Nord - Frost
   */
-  --nord8: #88C0D0;
-  /*
+    --nord8: #88c0d0;
+    /*
   Bluish core color.
 
   Used for language-specific syntactic/reserved support characters and keywords, operators, tags, units and
@@ -178,8 +178,8 @@ Styleguide Nord
 
   Styleguide Nord - Frost
   */
-  --nord9: #81A1C1;
-  /*
+    --nord9: #81a1c1;
+    /*
   Bluish core color.
 
   Used for markup doctypes, import/include/require statements, pre-processor statements and at-rules (`@`).
@@ -189,8 +189,8 @@ Styleguide Nord
 
   Styleguide Nord - Frost
   */
-  --nord10: #5E81AC;
-  /*
+    --nord10: #5e81ac;
+    /*
   Colorful component color.
 
   Used for errors, git/diff deletion and linter marker.
@@ -200,8 +200,8 @@ Styleguide Nord
 
   Styleguide Nord - Aurora
   */
-  --nord11: #BF616A;
-  /*
+    --nord11: #bf616a;
+    /*
   Colorful component color.
 
   Used for annotations.
@@ -211,11 +211,11 @@ Styleguide Nord
 
   Styleguide Nord - Aurora
   */
-  --nord12: #D08770;
-  /*
+    --nord12: #d08770;
+    /*
   Colorful component color.
 
-  Used for escape characters, regular expressions and markup entities.  
+  Used for escape characters, regular expressions and markup entities.
   In the UI scope used for warnings and git/diff renamings.
 
   Markup:
@@ -223,11 +223,11 @@ Styleguide Nord
 
   Styleguide Nord - Aurora
   */
-  --nord13: #EBCB8B;
-  /*
+    --nord13: #ebcb8b;
+    /*
   Colorful component color.
 
-  Main color for strings and attribute values.  
+  Main color for strings and attribute values.
   In the UI scope used for git/diff additions and success visualizations.
 
   Markup:
@@ -235,8 +235,8 @@ Styleguide Nord
 
   Styleguide Nord - Aurora
   */
-  --nord14: #A3BE8C;
-  /*
+    --nord14: #a3be8c;
+    /*
   Colorful component color.
 
   Used for numbers.
@@ -246,5 +246,5 @@ Styleguide Nord
 
   Styleguide Nord - Aurora
   */
-  --nord15: #B48EAD;
+    --nord15: #b48ead;
 }
