--- a/main.css
+++ b/main.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
+ul[role="menu-bar"] * {
+    /* font-size: 1.1em; */
+}
+
+body {
+    /* margin: 0 !important; */
+}
+
 h1#hero-typed {
     font-size: 3em !important;
 }
@@ -9,9 +17,82 @@ p#hero-typed {
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 2.5em;
+    /* Use less space */
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 p {
-    font-size: 1.5em;
+    font-size: 1.2em;
+    line-height: 1.5em;
+}
+
+div.window {
+    height: 100% !important;
+}
+/*
+div.bmenu {
+    position: absolute;
+    bottom: 0;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    width: calc(100% - 16px);
+} */
+
+div.bmenu div.modal-dialog {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 28px;
+    overflow-y: visible;
+}
+
+div.bmenu div.modal-dialog div.inner-border div.modal-contents * {
+    padding: 0px 3px;
+    margin: 1px;
+    transition: ease-in-out 50ms;
+}
+
+div.bmenu div.modal-dialog div.inner-border div.modal-contents:last-child {
+    padding: 0;
+    transition: ease-in-out 50ms;
+}
+
+div.bmenu div.modal-dialog div.inner-border div.modal-contents:first-child {
+    padding: 0 3 0 0px;
+    transition: ease-in-out 150ms;
+}
+
+div.bmenu
+    div.modal-dialog
+    div.inner-border
+    div.modal-contents
+    div
+    div.field-row
+    a:hover {
+    scale: 180%;
+    padding: 0px 6px;
+    transform: translateY(-10%);
+}
+
+div.bmenu
+    div.modal-dialog
+    div.inner-border
+    div.modal-contents
+    div
+    div.field-row
+    a:hover
+    + a,
+div.modal-dialog
+    div.inner-border
+    div.modal-contents
+    div
+    div.field-row
+    a:has(+ a:hover) {
+    scale: 140%;
+    padding: 0px 6px;
+    transform: translateY(-5%);
 }
