--- a/css/skills.css
+++ b/css/skills.css
@@ -50,6 +50,11 @@
   height: 15%;
 }
 
+.skills-container:hover .skills-overlay-node {
+  top: 70%;
+  height: 30%;
+}
+
 .skills-container:hover .skills-overlay-html {
   top: 0%;
   height: 100%;
