--- a/css/main.css
+++ b/css/main.css
@@ -2,21 +2,21 @@
 @import "responsive.css";
 @import url('https://cdn.jsdelivr.net/npm/@catppuccin/palette/css/catppuccin.css');
 @import "skills.css";
+@import "hamburger.css";
+@import "liquidglass.css";
+@import "presetstyles.css";
 
-
-:root {
-  --sans-serif: Montserrat, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
-  --heading: Onest, var(--sans-serif);
-  --monospace: "Space Mono", monospace;
-  --text-darkmode: var(--ctp-macchiato-text);
-  --bg-darkmode: var(--ctp-macchiato-base)
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: var(--monospace);
   color: var(--text-darkmode);
   text-align: center;
+  cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewbox='0 0 28 28' height='36' width='36'%3E%3Ctext font-size='20' x='14' y='14' text-anchor='middle' dominant-baseline='middle'%3E⚫%3C/text%3E%3C/svg%3E") 14 14, auto;
 }
 
 h1#hero-typed {
@@ -54,9 +54,13 @@ nav {
 nav ul div {
   display: flex;
   list-style-type: none;
-  background-color: var(--ctp-macchiato-surface0);
+  /* background-color: var(--ctp-macchiato-surface0); */
+  /* background: transparent;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 2px solid #b3b3b380; */
   padding: 10px;
-  margin-right: 40px;
+  margin: 20px;
   border-radius: 51vh;
   /* box-shadow:
         0 0 7px #fff,
@@ -88,16 +92,8 @@ nav ul div:first-child li {
   padding: 0 10px;
 }
 
-nav ul div li a {
-  color: var(--ctp-macchiato-blue);
-}
-
-#hamburger {
-  display: none;
-}
-
 .section:not(.section:first-child) {
-  padding: 0 20vw;
+  padding: 0 10vw;
 }
 
 /* Section styles */
